Fix layout on mobile
- flex direction switch to column at < 600px
- avatar rail on top
- hide spacing gutters and rails
- consistent margins for avatar and form rail
- hide avatar rail on mobile when no content (signup, login)

--- a/css/avatar-rail.css
+++ b/css/avatar-rail.css
@@ -1,5 +1,5 @@
 .avatar-rail-menu {
-   font-size: x-small;
+   font-size: small;
 }
 
 .avatar.avatar-xxl {
@@ -8,23 +8,33 @@
    width: 6rem;
 }
 
+@media (max-width: 600px) {
+   .avatar.avatar-xxl {
+      font-size: 1.6rem;
+      height: 4rem;
+      width: 4rem;
+   }
+}
+
+
 .arrow-box {
    position: relative;
    color: white;
    background: #5757d9;
+   border-radius: 0.1rem;
 }
 
-.arrow-box:after {
-   left: 100%;
-   top: 50%;
-   border: solid transparent;
-   content: " ";
-   height: 0;
-   width: 0;
-   position: absolute;
-   pointer-events: none;
-   border-color: rgba(87, 85, 157, 0);
-   border-left-color: #5757d9;
-   border-width: 10px;
-   margin-top: -10px;
-}
+/* .arrow-box:after { */
+/*    left: 100%; */
+/*    top: 50%; */
+/*    border: solid transparent; */
+/*    content: " "; */
+/*    height: 0; */
+/*    width: 0; */
+/*    position: absolute; */
+/*    pointer-events: none; */
+/*    border-color: rgba(87, 85, 157, 0); */
+/*    border-left-color: #5757d9; */
+/*    border-width: 10px; */
+/*    margin-top: -10px; */
+/* } */
