--- a/css/flex-container.css
+++ b/css/flex-container.css
@@ -3,8 +3,23 @@
    flex-direction: row;
 }
 
+/* avatar rail to top on mobile */
+@media (max-width: 600px) {
+   .flex-container {
+      flex-direction: column;
+      align-items: center;
+   }
+   .avatar-rail {
+      height: auto;
+      width: auto;
+   }
+   .form-rail {
+      width: 307px;
+   }
+}
+
 .left-rail {
-   /* background-color: lightgray; */
+   background-color: lightgray;
    flex: 0 0 59px;
 }
 
@@ -15,25 +30,29 @@
 }
 
 .left-gutter {
-   /* background-color: gray; */
+   background-color: gray;
    flex: 2 2 auto;
 }
 
 .avatar-rail {
+   /* flex: 0 0 auto; */
    flex: 0 0 173px;
+   margin: 8px;
 }
+
 
 .form-rail {
    flex: 0 0 307px;
+   margin: 8px;
 }
 
 .dialog-rail {
-   /* background-color: lightgray; */
+   background-color: lightgray;
    flex: 0 1 470px;
 }
 
 .right-gutter {
-   /* background-color: gray; */
+   background-color: gray;
    flex: 6 6 auto;
 }
 
